@@ -1,3 +1,12 @@
+2007-03-28 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>
+
+	* m4/depcomp, m4/missing, src/dfu.c, src/intel_hex.c,
+	  src/commands.c, src/atmel.c, src/util.h, src/dfu.h,
+	  src/intel_hex.h, src/main.c, src/arguments.c,
+	  src/commands.h, src/atmel.h, src/arguments.h,
+	  src/util.c, COPYING: Updated the FSF address in the
+	  GPL license.
+
 2007-01-27 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>
 
 	* configure.ac: Incremented the release number
